--- a/devtools/views/Mapping.html
+++ b/devtools/views/Mapping.html
@@ -14,12 +14,7 @@
             </svg>
         </a>
     </div>
-    <div><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-            enable-background="new 0 0 32 32" version="1.1" viewBox="0 0 32 32" xml:space="preserve" width="12px">
-            <path class="nav__icon-fill" clip-rule="evenodd"
-                d="M32,16.009c0-0.267-0.11-0.522-0.293-0.714  l-9.899-9.999c-0.391-0.395-1.024-0.394-1.414,0c-0.391,0.394-0.391,1.034,0,1.428l8.193,8.275H1c-0.552,0-1,0.452-1,1.01  s0.448,1.01,1,1.01h27.586l-8.192,8.275c-0.391,0.394-0.39,1.034,0,1.428c0.391,0.394,1.024,0.394,1.414,0l9.899-9.999  C31.894,16.534,31.997,16.274,32,16.009z"
-                fill="#121313" fill-rule="evenodd" />
-        </svg></div>
+    <div><img src="/devtools/images/arrow.svg"/></div>
     <div class="col-lg-4 form-group">
         <select name="" class="bootstrap-select field-select form-control">
             <option value="" disabled selected hidden>Select Destination Item Field</option>
@@ -38,11 +33,6 @@
     </a>
     <input class="replace-options" type="hidden" />
     <a class="delete-mapping d-none">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" xmlns:xlink="http://www.w3.org/1999/xlink"
-            version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 50 50" enable-background="new 0 0 50 50"
-            xml:space="preserve">
-            <path fill="#231F20"
-                d="M9.016,40.837c0.195,0.195,0.451,0.292,0.707,0.292c0.256,0,0.512-0.098,0.708-0.293l14.292-14.309  l14.292,14.309c0.195,0.196,0.451,0.293,0.708,0.293c0.256,0,0.512-0.098,0.707-0.292c0.391-0.39,0.391-1.023,0.001-1.414  L26.153,25.129L40.43,10.836c0.39-0.391,0.39-1.024-0.001-1.414c-0.392-0.391-1.024-0.391-1.414,0.001L24.722,23.732L10.43,9.423  c-0.391-0.391-1.024-0.391-1.414-0.001c-0.391,0.39-0.391,1.023-0.001,1.414l14.276,14.293L9.015,39.423  C8.625,39.813,8.625,40.447,9.016,40.837z" />
-        </svg>
+        <img src="/devtools/images/cross.svg"/>
     </a>
 </div>
