--- a/devtools/views/AddSectionLink.html
+++ b/devtools/views/AddSectionLink.html
@@ -1,12 +1,5 @@
 <a id="addMappingSection" href="#" class="link-secondary add-mapping pr-2">+ Add another Mapping Section</a>
 <span data-toggle="tooltip"
     title="Add another Item/Sub-Item & Field Mapping for this URL import. When adding mapping for sub-item(s), use $name in the item path for current item">
-    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1"
-        x="0px" y="0px" width="16px" height="16px" viewBox="0 0 64 64" enable-background="new 0 0 64 64"
-        xml:space="preserve">
-        <path class="nav__icon-stroke" fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10"
-            d="M53.92,10.081c12.107,12.105,12.107,31.732,0,43.838  c-12.106,12.108-31.734,12.108-43.84,0c-12.107-12.105-12.107-31.732,0-43.838C22.186-2.027,41.813-2.027,53.92,10.081z" />
-        <line stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="32" y1="47" x2="32" y2="25" />
-        <line stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="32" y1="21" x2="32" y2="17" />
-    </svg>
+    <img src="./images/info.svg" width="18px" />	
 </span>
