--- a/devtools/views/Mapping.html
+++ b/devtools/views/Mapping.html
@@ -20,7 +20,7 @@
             <option value="" disabled selected hidden>Select Destination Item Field</option>
         </select>
     </div>
-    <a class="find-replace field-options pr-3" title="Replace captured text">
+    <a class="find-replace field-options pr-3" href="#replaceTextPanel" title="Replace captured text">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1"
             x="0px" y="0px" style="enable-background:new 0 0 122.88 110.76" xml:space="preserve" width="16px"
             heigh="16px" viewBox="0 0 122.88 110.76">
