--- a/devtools/views/MappingSection.html
+++ b/devtools/views/MappingSection.html
@@ -7,7 +7,7 @@
         <div class="col-lg-8">
             <input class="path-selector target-selector outline-none form-control pr-5" name="pathSelector"
                 placeholder="Specify Parent Path(if new item) or Item Path(if existing) to create/update" type="text">
-            <a href="#itemPathSection" class="tree-icon">
+            <a href="#itemPathPanel" class="tree-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16">
                     <path fill="none" d="M0 0H24V24H0z" />
                     <path class="nav__icon-fill"
@@ -22,7 +22,7 @@
         <div class="col-lg-8">
             <input class="path-selector template-selector outline-none form-control pr-5"
                 placeholder="Specify the Destination Item's Template" name="templateSelector" type="text">
-            <a href="#templatePathSection" class="tree-icon">
+            <a href="#templatePathPanel" class="tree-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16">
                     <path fill="none" d="M0 0H24V24H0z" />
                     <path class="nav__icon-fill"
@@ -37,7 +37,7 @@
         <div class="col-lg-8">
             <input class="path-selector media-selector outline-none form-control pr-5" name="mediaSelector"
                 placeholder="Specify Media Path for importing any associated media (Optional)" type="text">
-            <a href="#mediaPathSection" class="tree-icon">
+            <a href="#mediaPathPanel" class="tree-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16">
                     <path fill="none" d="M0 0H24V24H0z" />
                     <path class="nav__icon-fill"
