--- a/devtools/views/Import.html
+++ b/devtools/views/Import.html
@@ -14,7 +14,7 @@
     <div class="row py-2 mb-3 w-100 form-group">
         <div class="col-lg-2"><strong>Sitecore URL:</strong></div>
         <div class="col-lg-6"><input id="sitecoreUrl" name="sitecoreUrl" class="form-control"
-                placeholder="Enter Destination Sitecore URL" type="text"></div>
+                placeholder="Enter Target Sitecore URL" type="text"></div>
         <div class="col-lg-2">
             <button id="authenticate" class="authenticate btn d-none" type="button" disabled>
                 <span id="authenticateLoading" class="spinner-grow spinner-grow-sm float-left" role="status"
