--- a/devtools/views/Settings.html
+++ b/devtools/views/Settings.html
@@ -28,13 +28,24 @@
         <div class="col-lg-2"><input id="username" class="form-control" placeholder="Enter Sitecore Username"
                 type="text" value="admin"></div>
         <div class="col-lg-2"><input id="password" class="form-control" placeholder="Enter Sitecore Password"
-                type="text" value="b"></div>
+                type="password" value="b"></div>
         <a class="py-1"
             href="https://github.com/SubbuRamanathan/sitecore-scrape-and-migrate/blob/main/privacy-policy.md"
             target="_blank">
             <img src="/devtools/images/info.svg" data-toggle="tooltip"
                 title="This Chrome Extension does not collect any information including credentials from you. Please click the info icon to review the privacy policy." />
         </a>
+    </div>
+    <div class="row py-2 mb-3 w-100 form-group">
+        <div class="col-lg-2"><strong>Item Name Replace Option:</strong></div>
+        <div class="col-lg-2"><input id="itemNameFindText" class="form-control" placeholder="Enter Find Text"
+                type="text" value="( |%20)"></div>
+        <div class="col-lg-2"><input id="itemNameReplaceText" class="form-control" placeholder="Enter Replace Text"
+                type="text" value="-"></div>
+        <span data-toggle="tooltip"
+            title="Specify find/replace pattern for the name of the item being created in Sitecore">
+            <img src="./images/info.svg" />	
+        </span>
     </div>
     <button id="save" class="btn btn-info my-2 mr-3" type="submit">Save</button>
     <span class="pt-3" id="saveSuccessMessage" style="display: none;">Saved Successfully!</span>
