--- a/devtools/views/AddSectionLink.html
+++ b/devtools/views/AddSectionLink.html
@@ -1,5 +1,5 @@
 <a id="addMappingSection" href="#" class="link-secondary add-mapping pr-2">+ Add another Mapping Section</a>
 <span data-toggle="tooltip"
-    title="Add another Item/Sub-Item & Field Mapping for this URL import. When adding mapping for sub-item(s), use $name in the item path for current item">
+    title="Add another Item/Sub-Item & Field Mapping for this URL import. When adding mapping for sub-item(s), use $name in the item path for current item/page">
     <img src="./images/info.svg" width="18px" />	
 </span>
