--- a/devtools/views/HistoryEntry.html
+++ b/devtools/views/HistoryEntry.html
@@ -6,7 +6,7 @@
         <a class="view-log link-info" data-id="$importId" href="#importLogPanel">View Log</a>
     </td>
     <td>
-        <a class="rerun-import link-info" data-id="$importId">Modify and Run</a>
+        <a class="rerun-import link-info" data-id="$importId" href="#">Modify and Run</a>
     </td>
     <td>
         <a class="delete-import" data-id="$importId">
