--- a/devtools/views/Mapping.html
+++ b/devtools/views/Mapping.html
@@ -1,7 +1,7 @@
 <div class="destination-field-map row py-2">
     <div class="col-lg-5 form-group">
         <input name="" class="outline-none dom-path form-control pr-5" placeholder="Pick DOM Element" type="text">
-        <a class="dom-picker">
+        <a class="dom-picker" data-toggle="tooltip" title="Double Click to select multiple DOM elements. Once finished selecting DOMs, click here again.">
             <svg xmlns="http://www.w3.org/2000/svg" width="18px" height="18px" viewBox="0 0 16 17"
                 class="float-right pt-1">
                 <g class="svg-fill" fill-rule="evenodd">
@@ -20,7 +20,7 @@
             <option value="" disabled selected hidden>Select Destination Item Field</option>
         </select>
     </div>
-    <a class="find-replace field-options pr-3" href="#replaceTextPanel" title="Replace captured text">
+    <a class="find-replace field-options pr-3" href="#replaceTextPanel" data-toggle="tooltip" title="Replace captured text">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1"
             x="0px" y="0px" style="enable-background:new 0 0 122.88 110.76" xml:space="preserve" width="16px"
             heigh="16px" viewBox="0 0 122.88 110.76">
