--- a/devtools/views/Import.html
+++ b/devtools/views/Import.html
@@ -33,6 +33,7 @@
     <button id="save" class="btn btn-info my-2 mr-3" type="submit">Save</button>
     <button id="import" class="btn btn-info my-2" type="submit">Import</button>
     <span class="pt-3 px-3 collapse" id="saveSuccessMessage">Saved Successfully!</span>
+    <span class="pt-3 px-3 collapse" id="importConfigFailed">Unable to import configuration, please authenticate and try again</span>
     <span class="pt-3 px-3 d-none" id="importSuccessMessage">Imported Successfully!</span>
     <div class="mt-3 d-none" id="importProgressMessage"><span
             class="spinner-border ml-3 mr-2 text-base12 loading-spinner"></span>Importing.. Please wait!</div>
