--- a/options/css/options.css
+++ b/options/css/options.css
@@ -4,6 +4,9 @@ body {
   color: #131313;
   font-family: "Noto Sans JP", sans-serif;
 }
+.header{
+  margin: 30px 0px;
+}
 .header img{
   padding: 10px;
   float: left;
@@ -11,12 +14,13 @@ body {
 }
 .header h1{
   float: left;
-  font-size: 2.5em;
+  font-size: 2em;
+  margin: 5px;
 }
 .container{
   font-weight: 300;
   width: inherit;
-  padding: 15px;
+  padding: 0px 15px;
 }
 .container b{
   font-weight: 600;
@@ -34,8 +38,10 @@ body {
   width: 100%;
 }
 .note{
-  font-size: 1.4em;
-  text-align: center;
+  font-size: 1.3em;
+  text-align: left;
+  position: relative;
+  left: 5px;
 }
 .abstract{
   font-weight: 600;
@@ -44,7 +50,6 @@ body {
 }
 .content{
   font-size: 1.2em;
-  padding: 10px 0px;
 }
 .danger{
   color: #ee3524;
