Added SPE Module

--- a/devtools/views/Settings.html
+++ b/devtools/views/Settings.html
@@ -43,7 +43,7 @@
         <div class="col-lg-2"><input id="itemNameReplaceText" class="form-control" placeholder="Enter Replace Text"
                 type="text" value="-"></div>
         <span data-toggle="tooltip"
-            title="Specify find/replace pattern for the name of the item being created in Sitecore">
+            title="Specify find/replace pattern for the name of the item being created in Sitecore (when using $name)">
             <img src="./images/info.svg" />	
         </span>
     </div>
