--- a/devtools/views/Import.html
+++ b/devtools/views/Import.html
@@ -2,6 +2,7 @@
     <div class="row py-2 w-100 form-group">
         <div class="col-lg-2"><strong>Webpage URL(s):</strong></div>
         <div class="col-lg-6">
+            <div class="fetched-urls"><span id="fetchedUrlsCount"></span> URLs found!</div>
             <textarea id="webpageUrls" name="webpageUrls" class="form-control outline-none w-100" rows="2"
                 placeholder="Enter Website URL(s) (semi-colon separated) or click fetch button to pull from Sitemap"></textarea>
         </div>
