Updated styles to support all dock options

--- a/devtools/views/Import.html
+++ b/devtools/views/Import.html
@@ -1,7 +1,7 @@
 <form id="importForm" class="row g-3 p-3" data-view="./views/Import.html" data-status="">
     <div class="row py-2 w-100 form-group">
-        <div class="col-lg-2"><strong>Webpage URL(s):</strong></div>
-        <div class="col-lg-6">
+        <div class="col-lg-2 col-sm-3"><strong>Webpage URL(s):</strong></div>
+        <div class="col-lg-6 col-sm-8 col-11">
             <div class="fetched-urls"><span id="fetchedUrlsCount"></span> URLs found!</div>
             <textarea id="webpageUrls" name="webpageUrls" class="form-control outline-none w-100" rows="2"
                 placeholder="Enter Website URL(s) (semi-colon separated) or click fetch button to pull from Sitemap"></textarea>
@@ -11,8 +11,8 @@
         </a>
     </div>
     <div class="row py-2 mb-3 w-100 form-group">
-        <div class="col-lg-2"><strong>Sitecore URL:</strong></div>
-        <div class="col-lg-6 pos-relative">
+        <div class="col-lg-2 col-sm-3"><strong>Sitecore URL:</strong></div>
+        <div class="col-lg-6 col-sm-8 col-11 pos-relative">
             <input id="sitecoreUrl" name="sitecoreUrl" class="form-control" placeholder="Enter Target Sitecore URL"
                 type="text">
             <div id="authenticate">
