--- a/devtools/views/Mapping.html
+++ b/devtools/views/Mapping.html
@@ -1,5 +1,5 @@
 <div class="destination-field-map row py-2">
-    <div class="col-lg-5 form-group">
+    <div class="col-lg-5 col-5 form-group">
         <input name="" class="outline-none dom-path form-control pr-5" placeholder="Pick DOM Element" type="text">
         <a class="dom-picker" data-toggle="tooltip" title="Double Click to select multiple DOM elements. Once finished selecting DOMs, click here again.">
             <svg xmlns="http://www.w3.org/2000/svg" width="18px" height="18px" viewBox="0 0 16 17"
@@ -15,9 +15,9 @@
         </a>
     </div>
     <div><img src="/devtools/images/arrow.svg"/></div>
-    <div class="col-lg-4 form-group">
+    <div class="col-lg-4 col-5 form-group">
         <select name="" class="bootstrap-select field-select form-control">
-            <option value="" disabled selected hidden>Select Destination Item Field</option>
+            <option value="" disabled selected hidden>Select Target Field</option>
         </select>
     </div>
     <a class="find-replace field-options pr-3" href="#replaceTextPanel" data-toggle="tooltip" title="Replace captured text">
