--- a/devtools/views/MappingSection.html
+++ b/devtools/views/MappingSection.html
@@ -1,10 +1,10 @@
-<div class="destination-group-map bg-base01 pl-3 p-2 mb-3 col-lg-8">
+<div class="destination-group-map bg-base01 p-3 mb-3 col-lg-8">
     <a class="delete-mapping-section d-none">
         <img src="/devtools/images/cross.svg">
     </a>
     <div class="row py-2 form-group">
-        <div class="col-lg-2 pr-0"><strong>Item Path:</strong></div>
-        <div class="col-lg-8">
+        <div class="col-lg-2 col-3 pr-0"><strong>Item Path:</strong></div>
+        <div class="col-lg-8 col-8">
             <input class="path-selector target-selector outline-none form-control pr-5" name="pathSelector"
                 placeholder="Specify the Item Path to create/update" type="text">
             <a href="#itemPathPanel" class="tree-icon">
@@ -17,12 +17,12 @@
             </a>
         </div>
         <span class="d-contents">
-            <img src="./images/info.svg" data-toggle="tooltip" title="Use $name for current page name. Replace options for Item Name can be configured in Settings tab." />	
+            <img src="./images/info.svg" class="ml-n2" data-toggle="tooltip" title="Use $name for current page name. Replace options for Item Name can be configured in Settings tab." />	
         </span>
     </div>
     <div class="row py-2 form-group">
-        <div class="col-lg-2 pr-0"><strong>Item Template:</strong></div>
-        <div class="col-lg-8">
+        <div class="col-lg-2 col-3 pr-0"><strong>Item Template:</strong></div>
+        <div class="col-lg-8 col-8">
             <input class="path-selector template-selector outline-none form-control pr-5"
                 placeholder="Specify the Target Item's Template" name="templateSelector" type="text">
             <a href="#templatePathPanel" class="tree-icon">
@@ -36,8 +36,8 @@
         </div>
     </div>
     <div class="row py-2 form-group">
-        <div class="col-lg-2 pr-0"><strong>Media Path:</strong></div>
-        <div class="col-lg-8">
+        <div class="col-lg-2 col-3 pr-0"><strong>Media Path:</strong></div>
+        <div class="col-lg-8 col-8">
             <input class="path-selector media-selector outline-none form-control pr-5" name="mediaSelector"
                 placeholder="Specify Media Path for importing any associated media (Optional)" type="text">
             <a href="#mediaPathPanel" class="tree-icon">
