--- a/devtools/css/main.css
+++ b/devtools/css/main.css
@@ -357,7 +357,7 @@ input[type='radio']:checked:after {
 
 .form-container{
   position: relative;
-  left: 180px;
+  margin-left: 180px;
 }
 
 .split__panel__hd,
@@ -445,7 +445,7 @@ form .btn {
 
 .config-section{
   width: 30%;
-  position: absolute;
+  min-width: 325px;
   right: 0px;
   height: 100%;
   background: var(--base01);
@@ -499,9 +499,8 @@ form .btn {
 }
 
 #authenticate.unauthorized button{
-  background: var(--sitecore-red);
+  background: #f37266;
   display: block !important;
-  opacity: 0.7;
   border: none;
   font-weight: 400;
   color: var(--base00);
@@ -554,8 +553,8 @@ select:invalid {
 
 .delete-mapping-section{
   position: absolute;
-  right: 10px;
-  top: 10px;
+  right: 7.5px;
+  top: 7.5px;
 }
 
 .collapse{
@@ -604,10 +603,6 @@ select:invalid {
 
 #importLogContainer .error{
   color: var(--sitecore-red);
-}
-
-.history-table{
-  width: 80%;
 }
 
 .history-table td{
