--- a/devtools/views/History.html
+++ b/devtools/views/History.html
@@ -3,12 +3,12 @@
         data-view="./views/History.html">
         <thead class="bg-base01">
             <tr>
-                <th class="col-lg-2">Import Timestamp</th>
-                <th class="col-lg-4">Imported URLs</th>
-                <th class="col-lg-3">Sitecore URL</th>
-                <th class="col-lg-1"></th>
-                <th class="col-lg-2"></th>
-                <th class="col-lg-1"></th>
+                <th class="col-2">Timestamp</th>
+                <th class="col-4">Imported URLs</th>
+                <th class="col-3">Sitecore URL</th>
+                <th class="col-1"></th>
+                <th class="col-2"></th>
+                <th class="col-1"></th>
             </tr>
         </thead>
         <tbody>
