--- a/devtools/views/HistoryEntry.html
+++ b/devtools/views/HistoryEntry.html
@@ -1,15 +1,15 @@
 <tr>
-    <td>$importTimestamp</td>
+    <td title="$importTimestamp">$importTimestamp</td>
     <td title="$importUrls">$importUrls</td>
     <td title="$sitecoreUrl">$sitecoreUrl</td>
     <td>
-        <a class="view-log link-info" data-id="$importId" href="#importLogPanel">View Log</a>
+        <a class="view-log link-info" title="View Log" data-id="$importId" href="#importLogPanel">View Log</a>
     </td>
     <td>
-        <a class="rerun-import link-info" data-id="$importId" href="#">Modify and Run</a>
+        <a class="rerun-import link-info" title="Modify & Run" data-id="$importId" href="#">Modify & Run</a>
     </td>
     <td>
-        <a class="delete-import" data-id="$importId">
+        <a class="delete-import" title="Delete" data-id="$importId">
             <img src="./images/cross.svg" /> 
         </a>
     </td>
