--- a/devtools/views/Settings.html
+++ b/devtools/views/Settings.html
@@ -1,7 +1,7 @@
 <form id="settingsForm" class="row g-3 p-3" data-view="./views/Settings.html">
     <div class="row py-2 w-100 form-group">
-        <div class="col-lg-2"><strong>Specify behavior when an Item already exists:</strong></div>
-        <div id="overwriteBehavior" class="col-lg-4">
+        <div class="col-lg-2 col-4"><strong>Specify behavior when an Item already exists:</strong></div>
+        <div id="overwriteBehavior" class="col-lg-4 col-6">
             <div class="form-check">
                 <input class="form-check-input" type="radio" name="overwriteBehavior" id="updateItem" value="1" checked>
                 <label class="form-check-label ml-2" for="updateItem">
@@ -17,17 +17,17 @@
         </div>
     </div>
     <div class="row py-2 mb-3 w-100 form-group">
-        <div class="col-lg-2"><strong>Import Language(Content):</strong></div>
-        <div class="col-lg-4"><input id="contentLanguage" name="requiredSetting" class="form-control"
+        <div class="col-lg-2 col-4"><strong>Import Language (Content):</strong></div>
+        <div class="col-lg-4 col-6"><input id="contentLanguage" name="requiredSetting" class="form-control"
                 placeholder="Specify Language ISO code for importing Content Items (Eg: en-US)" value="en" type="text">
         </div>
     </div>
     <div class="row py-2 mb-3 w-100 form-group">
-        <div class="col-lg-2"><strong>Sitecore Credentials(Required only for Media Import):</strong>
+        <div class="col-lg-2 col-4"><strong>Sitecore Credentials (Required only for Media Import):</strong>
         </div>
-        <div class="col-lg-2"><input id="username" class="form-control" placeholder="Enter Sitecore Username"
+        <div class="col-lg-2 col-3"><input id="username" class="form-control" placeholder="Enter Sitecore Username"
                 type="text" value="admin"></div>
-        <div class="col-lg-2"><input id="password" class="form-control" placeholder="Enter Sitecore Password"
+        <div class="col-lg-2 col-3"><input id="password" class="form-control" placeholder="Enter Sitecore Password"
                 type="password" value="b"></div>
         <a class="py-1"
             href="https://github.com/SubbuRamanathan/web-harvester-for-sitecore/blob/main/privacy-policy.md"
@@ -37,10 +37,10 @@
         </a>
     </div>
     <div class="row py-2 mb-3 w-100 form-group">
-        <div class="col-lg-2"><strong>Item Name Replace Option:</strong></div>
-        <div class="col-lg-2"><input id="itemNameFindText" class="form-control" placeholder="Enter Find Text"
+        <div class="col-lg-2 col-4"><strong>Item Name Replace Option:</strong></div>
+        <div class="col-lg-2 col-3"><input id="itemNameFindText" class="form-control" placeholder="Enter Find Text"
                 type="text" value="( |%20)"></div>
-        <div class="col-lg-2"><input id="itemNameReplaceText" class="form-control" placeholder="Enter Replace Text"
+        <div class="col-lg-2 col-3"><input id="itemNameReplaceText" class="form-control" placeholder="Enter Replace Text"
                 type="text" value="-"></div>
         <span data-toggle="tooltip"
             title="Specify find/replace pattern for the name of the item being created in Sitecore (when using $name)">
