--- a/content_scripts/content_script.css
+++ b/content_scripts/content_script.css
@@ -2,9 +2,12 @@
     outline: 2px dashed #19a5a2;
     background-color: #d1fffe;
 }
-.marked-element-temp {
+.marked-element-temp:not(img) {
     outline: 3px solid  #19a5a2;
     background-color: #d1fffe;
+}
+img.marked-element-temp {
+    border: 3px solid  #19a5a2;
 }
 .marked-element,
 .marked-element-temp {
